--- a/src/views/formCarga.ejs
+++ b/src/views/formCarga.ejs
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <%- include('partials/head.ejs'); -%>
+        <link rel="stylesheet" href="/css/styles.css">
         <link rel="stylesheet" href="/css/formCarga.css">
     </head>
 <body>
-    <%- include('partials/header.ejs'); -%>
-
+    <header>
+        <%- include('partials/header.ejs'); -%>
+    </header>
     <h2>Carga tu producto</h2>
     <form>
       <div class="content">
