--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,7 +4,7 @@
     <%- include('partials/head.ejs'); -%>
     <!-------vinculo hoja de estilo css-->
     <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css" />
     <!-----------vinculo hoja de estilo modal y js-->
     <link rel="stylesheet" href="/css/modal.css" />
     <script src="/js/modal.js"></script>
@@ -13,7 +13,7 @@
     <%- include('partials/header.ejs'); -%>
     <main>
       <div class="contenedor">
-        <form action="" class="search-bar">
+        <form action="/search" class="search-bar">
           <input type="text" placeholder="Busca tu destino" name="q" />
           <button type="submit">
             <i class="fa-solid fa-magnifying-glass"></i>
