--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,13 +13,13 @@
               <a class="nav-link" href="/paquetes">Paquetes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Vuelos</a>
+              <a class="nav-link" href="/vuelos">Vuelos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Alojamiento</a>
+              <a class="nav-link" href="/alojamiento">Alojamiento</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Traslados</a>
+              <a class="nav-link" href="/traslados">Traslados</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/session">Ingresar</a>
@@ -30,6 +30,8 @@
             <li class="nav-item">
               <a class="nav-link" href="/paquetes/modifProducto">Modificar Producto</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/paquetes/deleteProducto">Eliminar Producto</a>
             <li class="nav-item">
               <i class="fas fa-headphones-alt"></i>
               <a class="nav-link headphones" href="tel:0810 888 810">Para Ventas <strong>0810 888 810</strong></a>
