--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -12,10 +12,9 @@
         <main>
             <main>
                 <div class="product">
-                  <img src="imagen-del-producto.jpg" alt="Nombre del producto">
-                  <h2>Nombre del producto</h2>
-                  <p>Descripción del producto</p>
-                  <h3>Precio: $XX</h3>
+                  <img src=<%= producto.imagen %> alt=<%= producto.imagen %> />
+                  <h2><%= producto.destino %></h2>
+                  <h3>Precio: $<%= producto.precio %></h3>
                   <button>Agregar al carrito</button>
                 </div>
               </main>
