--- a/src/views/userProfile.ejs
+++ b/src/views/userProfile.ejs
@@ -19,6 +19,7 @@
                 <br>
                 <br>
                 <div class="alert alert-success"><%= user.email%></div>
+                <button class="btn btn-danger"><a href="/userProfile/logout">Logout</a></button>
             </div>
         </div>
 
