--- a/src/views/paquetes.ejs
+++ b/src/views/paquetes.ejs
@@ -1,182 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <%- include('partials/head.ejs'); -%>
+  <%- include('partials/head.ejs'); -%>
     <title>Productos</title>
-       <!-------vinculo hoja de estilo css-->
-       <link rel="stylesheet" href="/css/index.css" />
-       <!-----------vinculo hoja de estilo modal y js-->
-       <link rel="stylesheet" href="/css/modal.css" />
-       <script src="/js/modal.js"></script>
+    <!-------vinculo hoja de estilo css-->
+    <link rel="stylesheet" href="/css/index.css" />
+    <!-----------vinculo hoja de estilo modal y js-->
+    <link rel="stylesheet" href="/css/modal.css" />
+    <script src="/js/modal.js"></script>
 </head>
+
 <body>
-    <%- include('partials/header.ejs'); -%>
+  <%- include('partials/header.ejs'); -%>
     <main>
       <div class="contenedor">
-        <form action="" class="search-bar">
+        <form action="/paquetes/search" class="search-bar">
           <input type="text" placeholder="Busca tu destino" name="q" />
           <button type="submit">
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </form>
       </div>
-    <section class="destacados">
-        <article class="producto">
-          <img src="/img/villa-carlos-paz.jpg" alt="Villa Carlos Paz" class="imagenes"/>
-          <section class="articulo">
-            <i class="fa-solid fa-plane-departure"></i>
-            <div class="nombres-precios">
-              <h3 class="nombres">Villa Carlos<br>Paz</h3>
-              <div class="borde"></div>
-              <div class="precios-tarifa">
-                <h2 class="precios">$39.631</h2>
-                <h4 class="tarifa">Tarifa por una persona</h4>
-              </div>
-              <button class="button-model" id="myBtn">Detalle</button>
-              <!-------------Modal-->
-              <div id="myModal" class="modal">
-                <div class="modal-content">
-                  <span class="close">&times;</span>
-                  <img src="/img/villa-carlos-paz.jpg" alt="Imagen del producto"/>
-                  <p>detalle capilla</p>
-                  <div class="desde-hasta">
-                    <div class="desde">
-                      <label for="desde">Desde:</label>
-                      <div>
-                        <input type="date" id="desde" value="fecha_actual" />
+      <section class="destacados">
+        <% servicios.forEach(servicio=> { %>
+          <article class="producto">
+            <img src="/img/villa-carlos-paz.jpg" alt="Villa Carlos Paz" class="imagenes" />
+            <section class="articulo">
+              <i class="fa-solid fa-plane-departure"></i>
+              <div class="nombres-precios">
+                <h3 class="nombres"><%= servicio.destino %></h3>
+                <div class="borde"></div>
+                <div class="precios-tarifa">
+                  <h2 class="precios">$<%= servicio.precio %></h2>
+                  <h4 class="tarifa">Tarifa por una persona: <%= servicio.precio %></h4>
+                </div>
+                <button class="button-model" id="myBtn">Detalle</button>
+                <!-------------Modal-->
+                <div id="myModal" class="modal">
+                  <div class="modal-content">
+                    <span class="close"></span>
+                    <img src="/img/villa-carlos-paz.jpg" alt="Imagen del producto" />
+                    <p>detalle capilla</p>
+                    <div class="desde-hasta">
+                      <div class="desde">
+                        <label for="desde">Desde:</label>
+                        <div>
+                          <input type="date" id="desde" value="fecha_actual" />
+                        </div>
                       </div>
-                    </div>
-                    <div class="hasta">
-                      <label for="hasta">Hasta:</label>
-                      <div>
-                        <input type="date" id="hasta" value="fecha_actual" />
+                      <div class="hasta">
+                        <label for="hasta">Hasta:</label>
+                        <div>
+                          <input type="date" id="hasta" value="fecha_actual" />
+                        </div>
                       </div>
+                      <button class="button-model">Agregar viaje</button>
                     </div>
-                    <button class="button-model">Agregar viaje</button>
                   </div>
                 </div>
               </div>
-            </div>
-          </section>
-        </article>
-        <article class="producto">
-          <img src="/img/capilla.jpg" alt="Capilla del monte" class="imagenes"/>
-          <section class="articulo">
-            <i class="fa-solid fa-plane-departure"></i>
-            <div class="nombres-precios">
-              <h3 class="nombres">Capilla del<br>Monte</h3>
-              <div class="borde"></div>
-              <div class="precios-tarifa">
-                <h2 class="precios">$35407</h2>
-                <h4 class="tarifa">Tarifa por una persona</h4>
-              </div>
-              <button class="button-model" id="myBtn">Detalle</button>
-              <!-------------Modal-->
-              <div id="myModal" class="modal">
-                <div class="modal-content">
-                  <span class="close">&times;</span>
-                  <img src="/img/capilla.jpg" alt="Imagen del producto" />
-                  <p>detalle capilla</p>
-                  <div class="desde-hasta">
-                    <div class="desde">
-                      <label for="desde">Desde:</label>
-                      <div>
-                        <input type="date" id="desde" value="fecha_actual" />
-                      </div>
-                    </div>
-                    <div class="hasta">
-                      <label for="hasta">Hasta:</label>
-                      <div>
-                        <input type="date" id="hasta" value="fecha_actual" />
-                      </div>
-                    </div>
-                    <button class="button-model">Agregar viaje</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-        </article>
-        <article class="producto">
-          <img src="/img/bariloche.jpeg" alt="Villa Carlos Paz" class="imagenes"/>
-          <section class="articulo">
-            <i class="fa-solid fa-plane-departure"></i>
-            <div class="nombres-precios">
-              <h3 class="nombres">San Carlos<br>Bariloche</h3>
-              <div class="borde"></div>
-              <div class="precios-tarifa">
-                <h2 class="precios">$40000</h2>
-                <h4 class="tarifa">Tarifa por una persona</h4>
-              </div>
-              <button class="button-model" id="myBtn">Detalle</button>
-              <!-------------Modal-->
-              <div id="myModal" class="modal">
-                <div class="modal-content">
-                  <span class="close">&times;</span>
-                  <img src="/img/bariloche.jpg" alt="Imagen del producto" />
-                  <p>detalle bariloche</p>
-                  <div class="desde-hasta">
-                    <div class="desde">
-                      <label for="desde">Desde:</label>
-                      <div>
-                        <input type="date" id="desde" value="fecha_actual" />
-                      </div>
-                    </div>
-                    <div class="hasta">
-                      <label for="hasta">Hasta:</label>
-                      <div>
-                        <input type="date" id="hasta" value="fecha_actual" />
-                      </div>
-                    </div>
-                    <button class="button-model">Agregar viaje</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-        </article>
-        <article class="producto">
-          <img src="/img/cataratas.jpg" alt="Cataratas del iguazu" class="imagenes"/>
-          <section class="articulo">
-            <i class="fa-solid fa-plane-departure"></i>
-            <div class="nombres-precios">
-              <h3 class="nombres">Cataratas del<br>Iguazu</h3>
-              <div class="borde"></div>
-              <div class="precios-tarifa">
-                <h2 class="precios">$37000</h2>
-                <h4 class="tarifa">Tarifa por una persona</h4>
-              </div>
-              <button class="button-model" id="myBtn">Detalle</button>
-              <!-------------Modal-->
-              <div id="myModal" class="modal">
-                <div class="modal-content">
-                  <span class="close">&times;</span>
-                  <img src="/img/cataratas.jpg" alt="Imagen del producto" />
-                  <p>detalle cataratas</p>
-                  <div class="desde-hasta">
-                    <div class="desde">
-                      <label for="desde">Desde:</label>
-                      <div>
-                        <input type="date" id="desde" value="fecha_actual" />
-                      </div>
-                    </div>
-                    <div class="hasta">
-                      <label for="hasta">Hasta:</label>
-                      <div>
-                        <input type="date" id="hasta" value="fecha_actual" />
-                      </div>
-                    </div>
-                    <button class="button-model">Agregar viaje</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-        </article>
+            </section>
+          </article>
+          <% }) %>
       </section>
     </main>
     <footer>
       <%- include('partials/footer.ejs'); -%>
     </footer>
 </body>
+
 </html>
