--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -29,10 +29,10 @@
             <div class="styledate">
               <label for="surname">Apellido</label>
               <br>
-              <input class="styleinput" type='text' name="surname" id="surname" placeholder="Ingrese su apellido" maxlength="40" mb-form-field-input="" value="<%= locals.oldData ? oldData.surname:null %>" > 
-                <% if (locals.errors && errors.surname){%>
+              <input class="styleinput" type='text' name="lastName" id="lastName" placeholder="Ingrese su apellido" maxlength="40" mb-form-field-input="" value="<%= locals.oldData ? oldData.lastName:null %>" > 
+                <% if (locals.errors && errors.lastName){%>
               <div class="text-danger">
-                <%= errors.surname.msg %>
+                <%= errors.lastName.msg %>
               </div>
               <%}%>
           </div> 
@@ -83,7 +83,7 @@
                     <select name = "type" class="form-select <%=locals.errors && errors.type ? "is-invalid": null %>">
                     <option value=""> selecciona una categoria</option>
                     <% 
-                      let type = ["Cliente","Administrador"];
+                      let type = ["user","admin"];
                     %> 
                     <% for (const unaCategoria of type) { %>
                     <option
