Se corrige error SyntaxError: Unexpected token < in JSON at position 669

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -144,7 +144,7 @@
     </main>
     <%- include('partials/footer.ejs'); -%>
 
-<!--   <script>
+<!--   <script> VER CARRITO
     const webLogo = document.querySelector('#logo')
     webLogo.addEventListener('click', () => {
             if(window){
