--- a/public/css/formCarga.css
+++ b/public/css/formCarga.css
@@ -68,11 +68,13 @@ form {
   .custom-file-input {
     display: flex;
     position: relative;
-    padding: 10px 20px;
     background-color: #37506C;
     color: white;
-    cursor: pointer;
+    cursor: pointer; 
+    text-align: center;
+    padding: 10px 10px;
     margin-top: 10px;
+    margin-bottom: 10px;
     border-radius: 8px;
     width: 70%;
     outline: none;
@@ -86,7 +88,6 @@ form {
     height: 100%;
     background-color:#37506C;
     color: white;
-    padding: 10px 20px;
     border-radius: 8px;
     
   }
