--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -15,7 +15,7 @@
             <li class="nav-item">
               <a class="nav-link" href="/session">Ingresar</a>
             </li>
-            <li class="nav-itme">
+            <li class="nav-item">
               <a class="nav-link" href="/paquetes/formCarga">Cargar Producto</a>
             </li>
             <li class="nav-item">
