--- a/public/css/formCarga.css
+++ b/public/css/formCarga.css
@@ -44,7 +44,7 @@ form {
   }
   
   input[type="submit"] {
-    background-color: #37506C;
+    background-color: var(--logo);
     color: white;
     padding: 12px 20px;
     border: none;
@@ -53,7 +53,7 @@ form {
   }
 
   input[type="reset"] {
-    background-color: #37506C;
+    background-color: var(--logo);
     color: white;
     padding: 12px 20px;
     border: none;
@@ -62,13 +62,13 @@ form {
   }
 
   input[type="reset"]:hover, input[type="submit"]:hover{
-    background-color: #51667e;
+    background-color: var(--hooverbutton);
   }
 
   .custom-file-input {
     display: flex;
     position: relative;
-    background-color: #37506C;
+    background-color: var(--logo);
     color: white;
     cursor: pointer; 
     text-align: center;
@@ -86,13 +86,13 @@ form {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color:#37506C;
+    background-color: var(--hooverbutton);
     color: white;
     border-radius: 8px;
     
   }
   .custom-file-input:hover::before {
-    background-color: #51667e;
+    background-color: var(--hooverbutton);
   }
 
 .archivo{
