--- a/src/views/formCarga.ejs
+++ b/src/views/formCarga.ejs
@@ -25,8 +25,8 @@
             <label for="periodo">Periodo:</label>
             <input type="text" id="periodo" name="periodo" required>
 
-            <label for="file-input" class="custom-file-input">Elige un archivo</label>
-            <input type="file" id="file-input" class="archivo" required>
+            <label for="imagen" class="custom-imagen">Elige un archivo</label>
+            <input type="file" id="imagen" class="imagen" required>
 
             <label for="traslado">Traslado:</label>
             <input type="text" id="traslado" name="traslado" required>
@@ -34,10 +34,18 @@
             <label for="alojamiento">Alojamiento:</label>
             <input type="text" id="alojamiento" name="alojamiento" required>
 
-            <label for="habitacion">Habitacion:</label>
-            <input type="text" id="habitacion" name="habitacion" required>
+            <label for="habitacion">Tipo de habitación:</label>
+            <select id="habitacion" name="habitacion" required>
+            <option value="">Selecciona una opción</option>
+            <option value="King">King</option>
+            <option value="Queen">Queen</option>
+            <option value="Quad">Quad</option>
+            <option value="Triple">Triple</option>
+            <option value="Doble">Doble</option>
+            <option value="Individual">Individual</option>
+            </select>
 
-            <label for="dias">Dias:</label>
+            <label for="dias">Cantidad de días:</label>
             <input type="text" id="dias" name="dias" required>
 
             <input type="submit" value="Enviar">
