--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -36,14 +36,15 @@
         <% paquetes.forEach(producto => { %> 
           <article class="producto">
             <a href="/paquetes/detail/<%= producto.id %>">
-            <img src="/img/paquetes/<%= producto.imagen%>" alt="Capilla del monte" class="imagenes"/>
+            <img src="/img/paquetes/<%= producto.imagen%>" alt="<%= producto.destino %>" class="imagenes"/>
             <section class="articulo">
               <i class="fa-solid fa-plane-departure"></i>
               <div class="nombres-precios">
                 <h3 class="nombres"><%= producto.destino %></h3>
+                <h3 class="nombres"><%= producto.periodo %></h3>
                 <div class="borde"></div>
                 <div class="precios-tarifa">
-                  <h2 class="precios"><%= producto.precio %></h2>
+                  <h2 class="precios"><%="$"+ producto.precio %></h2>
                   <h4 class="tarifa"><%= producto.tarifa %></h4>
                 </div>
                 <button class="button-model" id="myBtn"></button>
